tests/errors/operators/unary-op-not-found.fn
---
Description: Unary minus applied to a bool
Expected: FN3211
---

type Program
{
    fn Main -> i32
    {
        var b = true
        var x = -b
        return 0
    }
}
